--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,13 @@ section {
     padding-top:6em;
 }
 
+h2 {
+    background:#00babe;
+    color:white;
+    padding:2px;
+    margin:0 auto;
+}
+
 
 /*---------------------navigation---------------*/
 
@@ -49,6 +56,7 @@ nav ul li a {
     padding: .5em 1em;
     background: purple;
     border-radius: 15px;
+    color:white;
 }
 
 nav ul li a:hover {
