changed nav color

--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,8 @@ nav ul li {
 
 nav ul li a {
     padding: .5em 1em;
-    background: purple;
-    border-radius: 15px;
+    background: #00babe;
+    border-radius: 20px;
     color:white;
 }
 
